--- a/EmpresaImportadoraDC/Views/Transportadoras/EditarTr.cshtml
+++ b/EmpresaImportadoraDC/Views/Transportadoras/EditarTr.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    Layout = null;
 }
 
 <section class="content">
@@ -11,12 +12,7 @@
             <div class="col-sm-6">
                 <h1 class="m-0">Editar transportadora</h1>
             </div>
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a asp-action="index" asp-controller="Transportadoras">Inicio</a></li>
-                    <li class="breadcrumb-item active">Editar transportadora</li>
-                </ol>
-            </div>
+           
         </div>
     </div>
 </section>
